--- a/components/background/gradient-home/gradient-home.module.scss
+++ b/components/background/gradient-home/gradient-home.module.scss
@@ -1,8 +1,7 @@
 .gradient-con {
 	position: fixed;
 	z-index: -2;
-	width: 100vw;
-	height: 100vh;
+	inset: 0;
 	&::after {
 		content: '';
 		position: absolute;
