(feat) new changes

--- a/components/header/home-header/home-header.module.scss
+++ b/components/header/home-header/home-header.module.scss
@@ -1,6 +1,8 @@
 .home-header-con {
 	position: sticky;
 	top: 0;
+	z-index: 1000;
+	backdrop-filter: blur(10px);
 }
 .home-header {
 	max-width: var(--max-width);
