--- a/components/header/home-header/home-header.module.scss
+++ b/components/header/home-header/home-header.module.scss
@@ -11,4 +11,12 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	overflow: hidden;
+}
+
+.header-text {
+	animation: popup 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+	animation-delay: 0.2s; /* Small delay before animation starts */
+	transform: translateY(100%); /* Initial state */
+	opacity: 0; /* Initial state */
 }
