--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,6 @@
 @import 'tailwindcss';
-
-@custom-variant dark (&:is(.dark *));
+@import './animations/animations';
+// @custom-variant dark (&:is(.dark *));
 
 @theme inline {
 	--color-background: var(--background);
