Add web3 providers, theme context and storage keys with UI components

--- a/components/header/home-header/home-header.module.scss
+++ b/components/header/home-header/home-header.module.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/animations/animations';
+
 .home-header-con {
 	position: sticky;
 	top: 0;
@@ -11,7 +13,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	overflow: hidden;
 }
 
 .header-text {
