(feat) button fixing

--- a/components/features/web3/connect-wallet-button/connect-wallet-button.module.scss
+++ b/components/features/web3/connect-wallet-button/connect-wallet-button.module.scss
@@ -8,4 +8,25 @@
 		transform: scale(1.1);
 		box-shadow: 0 8px 24px rgba(0, 0, 0, 0.33);
 	}
+	.avatar {
+		height: 16px;
+		width: 16px;
+		background: var(--connect-btn-color);
+	}
+	.name {
+		color: var(--connect-btn-color);
+	}
+}
+
+.wallet-dropdown {
+	border: 2px solid var(--modal-border);
+	background: var(--modal-bg);
+	box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+	backdrop-filter: blur(20px);
+}
+
+.swap-button {
+	background: var(--connect-btn-bg);
+	font-weight: 500;
+	font-size: var(--font-size-xsm);
 }
