--- a/styles/animations/_animations.scss
+++ b/styles/animations/_animations.scss
@@ -1,3 +1,10 @@
+.anim-popup {
+	animation: popup 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+	animation-delay: 0.2s;
+	transform: translateY(100%);
+	opacity: 0;
+}
+
 @keyframes popup {
 	0% {
 		transform: translateY(100%);
