--- a/components/header/home-header/home-header.module.scss
+++ b/components/header/home-header/home-header.module.scss
@@ -1,10 +1,11 @@
 @import '../../../styles/animations/animations';
 
 .home-header-con {
-	position: sticky;
+	position: fixed;
 	top: 20px;
 	z-index: 30;
 	padding: 0 20px;
+	inset-inline: 0;
 }
 .home-header {
 	max-width: var(--max-width);
