--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -111,7 +111,7 @@
 	--modal-border: hsl(0, 0%, 100%);
 
 	// inputs
-	--home-input-bg: hsl(0, 0%, 100%, 0.66);
+	--home-input-bg: hsl(0, 0%, 100%, 1);
 	--home-input-color: var(--text-secondary);
 	--home-input-border: hsl(0, 0%, 100%);
 
@@ -162,5 +162,10 @@
 		isolation: isolate;
 		min-height: 100vh;
 		width: 100vw;
+		overflow-x: hidden;
+		scrollbar-width: none;
+		&::-webkit-scrollbar {
+			display: none;
+		}
 	}
 }
