--- a/components/container/chat-input/chat-input-wrapper.module.scss
+++ b/components/container/chat-input/chat-input-wrapper.module.scss
@@ -1,12 +1,12 @@
 .home-input-wrapper {
 	background: var(--home-input-bg);
 	border: 2px solid var(--home-input-border);
-	backdrop-filter: blur(10px);
+	backdrop-filter: blur(14px);
 	border-radius: 12px;
 	height: 60px;
 	display: flex;
 	align-items: center;
-	transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
+	// transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
 	box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
 	&:hover {
 		transform: scale(1.1);
