--- a/components/container/chat-input/chat-input-wrapper.module.scss
+++ b/components/container/chat-input/chat-input-wrapper.module.scss
@@ -1,19 +1,17 @@
 .home-input-wrapper {
 	background: var(--home-input-bg);
 	border: 2px solid var(--home-input-border);
-	backdrop-filter: blur(14px);
 	border-radius: 12px;
 	height: 60px;
 	display: flex;
 	align-items: center;
-	// transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
+	transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
 	box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-	&:hover {
-		transform: scale(1.1);
-		box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
-	}
+
 	padding: 0 10px;
 	gap: 8px;
+	user-select: none;
+	cursor: pointer;
 }
 
 .home-input-box {
@@ -21,19 +19,6 @@
 	position: relative;
 	isolation: isolate;
 
-	&:has(.home-input-con:not(:placeholder-shown)) {
-		.home-input-placeholder {
-			opacity: 0;
-		}
-	}
-
-	.home-input-con {
-		width: 100%;
-		background: transparent;
-		border: none;
-		padding: 0;
-		color: var(--text-secondary);
-	}
 	.home-input-placeholder {
 		position: absolute;
 		display: flex;
@@ -43,4 +28,15 @@
 		pointer-events: none;
 		z-index: -1;
 	}
+}
+
+.home-chat-icon-con {
+	width: 36px;
+	height: 36px;
+	border-radius: 50%;
+	background: var(--bg-negative);
+	color: var(--bg-negative-foreground);
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
