--- a/features/chat/chat.module.scss
+++ b/features/chat/chat.module.scss
@@ -3,25 +3,28 @@
 	display: flex;
 	flex-direction: column;
 	min-height: 75vh;
-	gap: 8px;
 	height: 100%;
 }
 
 .chatContent {
 	flex: 1;
-	overflow: hidden;
+	overflow-y: scroll;
 	display: flex;
 	flex-direction: column;
 }
 
 .chatMessagesWrapper {
 	flex: 1;
-	overflow-y: auto;
-	padding: 1rem 0;
+	overflow-y: scroll;
 	display: flex;
 	flex-direction: column;
-	gap: 1.1rem;
-	scrollbar-width: thin;
+	gap: 24px;
+	padding: 20px 20px 0 20px;
+	.welcomeText {
+		font-size: 24px;
+		font-weight: 500;
+		line-height: 1.2;
+	}
 }
 
 .emptyState {
@@ -34,16 +37,17 @@
 
 .chatMessage {
 	display: flex;
-	align-items: flex-end;
-	gap: 0.7rem;
-	padding: 0.1rem 0;
+	align-items: flex-start;
+	gap: 12px;
 }
 
 .user {
 	justify-content: flex-end;
 	.messageBubble {
-		background: var(--primary);
-		color: var(--primary-foreground);
+		padding: 10px 16px;
+		border-radius: 12px;
+		background: var(--chat-bubble-user-bg);
+		color: var(--chat-bubble-user-color);
 		align-self: flex-end;
 	}
 }
@@ -51,16 +55,12 @@
 .ai {
 	justify-content: flex-start;
 	.messageBubble {
-		background: var(--secondary);
-		color: var(--secondary-foreground);
+		color: var(--chat-bubble-ai-color);
 		align-self: flex-start;
 	}
 }
 
 .messageBubble {
-	padding: 0.85rem 1.2rem;
-	border-radius: var(--radius);
-	box-shadow: 0 1px 8px rgba(0, 0, 0, 0.06);
 	font-size: 1rem;
 	max-width: 75%;
 	word-break: break-word;
@@ -74,9 +74,6 @@
 	color: var(--muted-foreground);
 	margin-top: 0.2rem;
 	text-align: right;
-}
-
-.chatForm {
 }
 
 .chatInputContainer {
