--- a/features/chat/chat.module.scss
+++ b/features/chat/chat.module.scss
@@ -11,6 +11,9 @@
 	overflow-y: scroll;
 	display: flex;
 	flex-direction: column;
+	&::-webkit-scrollbar {
+		display: none;
+	}
 }
 
 .chatMessagesWrapper {
@@ -20,6 +23,9 @@
 	flex-direction: column;
 	gap: 24px;
 	padding: 20px 20px 0 20px;
+	&::-webkit-scrollbar {
+		display: none;
+	}
 	.welcomeText {
 		font-size: 24px;
 		font-weight: 500;
