--- a/components/features/web3/connect-wallet-button/connect-wallet-button.module.scss
+++ b/components/features/web3/connect-wallet-button/connect-wallet-button.module.scss
@@ -4,6 +4,7 @@
 	font-size: var(--font-size-xsm);
 	transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 	border-radius: 10px;
+	color: var(--connect-btn-color);
 	&:hover {
 		transform: scale(1.1);
 		box-shadow: 0 8px 24px rgba(0, 0, 0, 0.33);
@@ -14,7 +15,7 @@
 		background: var(--connect-btn-color);
 	}
 	.name {
-		color: var(--connect-btn-color);
+		color: inherit;
 	}
 }
 
