--- a/features/chat/chat.module.scss
+++ b/features/chat/chat.module.scss
@@ -67,6 +67,9 @@
 }
 
 .messageBubble {
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
 	font-size: 1rem;
 	max-width: 75%;
 	word-break: break-word;
@@ -142,4 +145,9 @@
 	background: var(--muted);
 	color: var(--muted-foreground);
 	cursor: not-allowed;
+}
+
+.connect-wallet-button {
+	background: var(--chat-bubble-user-bg) !important;
+	color: var(--chat-bubble-user-color) !important;
 }
