(feat) minor animation added

--- a/components/container/chat-input/chat-input-wrapper.module.scss
+++ b/components/container/chat-input/chat-input-wrapper.module.scss
@@ -22,6 +22,7 @@
 	isolation: isolate;
 
 	.home-input-placeholder {
+		white-space: nowrap;
 		position: absolute;
 		display: flex;
 		align-items: center;
