--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -95,8 +95,8 @@
 	--text-light: hsl(0, 0%, 55%);
 
 	// header
-	--header-bg: hsla(0, 0%, 100%, 1);
-	--header-border: hsl(0, 0%, 17%);
+	--header-bg: rgb(251, 251, 251);
+	--header-border: hsl(0, 0%, 100%);
 
 	// font size
 	--font-size-xsm: 13px;
