Add pool collection component with layout and styling

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -93,6 +93,7 @@
 	--text-primary: oklch(0.29 0 0);
 	--text-secondary: oklch(0.4 0.0338 278.1);
 	--text-light: hsl(0, 0%, 55%);
+	--text-green-1: hsl(85, 54%, 49%);
 
 	// header
 	--header-bg: rgb(251, 251, 251);
