Add pool card animations and remove All Weather Pool from available pools

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -134,6 +134,9 @@
 	--chat-bubble-ai-color: #fff;
 	--chat-bubble-user-color: #000;
 	--chat-bubble-user-bg: #fff;
+
+	// highlight
+	--highlight-green: hsl(123, 54%, 49%);
 }
 
 @layer base {
