--- a/features/home/components/pools/pool-collection.module.scss
+++ b/features/home/components/pools/pool-collection.module.scss
@@ -1,18 +1,67 @@
 .poolCon {
 	width: 100%;
 	height: 100%;
-	background: #0a0a0a;
-	padding: 110px 40px 40px;
+	background: #014539;
+	padding: 100px 40px 40px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	position: relative;
 
 	.poolBody {
 		flex: 1;
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
+	}
+	.poolCard {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 360px;
+		height: 540px;
+		perspective: 1000px;
+	}
+
+	.poolCardWrapper {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
 		width: 100%;
-		gap: 20px;
+		height: 100%;
+		animation: floating 3s infinite ease-in-out;
+		animation-delay: calc(var(--no) * 0.2s);
+	}
+	.cardInner {
+		position: relative;
+		width: 100%;
+		height: 100%;
+		transform-style: preserve-3d;
+	}
+	.cardFront,
+	.cardBack {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		backface-visibility: hidden;
+		overflow: hidden;
+	}
+
+	.cardBack {
+		padding: 16px;
+		background: #fff;
+		transform: rotateY(180deg);
+	}
+}
+
+@keyframes floating {
+	0% {
+		transform: translate(-50%, -50%);
+	}
+	50% {
+		transform: translate(-50%, -60%);
+	}
+	100% {
+		transform: translate(-50%, -50%);
 	}
 }
