--- a/features/home/components/pools/pool-collection.module.scss
+++ b/features/home/components/pools/pool-collection.module.scss
@@ -47,10 +47,9 @@
 	}
 
 	.cardBack {
-		padding: 16px;
-		background: #fff;
 		transform: rotateY(180deg);
 		border-radius: 16px;
+		overflow: hidden;
 	}
 }
 
