--- a/features/home/components/pools/pool-collection.module.scss
+++ b/features/home/components/pools/pool-collection.module.scss
@@ -64,3 +64,107 @@
 		transform: translate(-50%, -50%);
 	}
 }
+
+.poolCardAction {
+	--top-gradient: linear-gradient(to bottom, #ffffff 40%, #d0cbdf);
+	--heading-color: #1e1616;
+	cursor: pointer;
+	width: 100%;
+	height: 100%;
+	position: relative;
+	isolation: isolate;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	align-items: center;
+	padding: 35px;
+	.aprCon {
+		display: flex;
+		gap: 4px;
+		align-items: center;
+		margin-top: 20px;
+		p {
+			font-size: 24px;
+			font-weight: bold;
+			background: var(--top-gradient);
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+			background-clip: text;
+			&.aprText {
+				font-size: 96px;
+				line-height: 110%;
+				-webkit-background-clip: text;
+				-webkit-text-fill-color: transparent;
+				background-clip: text;
+			}
+		}
+	}
+	.heading {
+		font-size: 48px;
+		text-align: center;
+		font-weight: 800;
+		color: var(--heading-color);
+		opacity: 0.37;
+		line-height: 110%;
+	}
+	.gridCon {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: repeat(2, 50px);
+		gap: 16px;
+		width: 100%;
+	}
+	.gridItem {
+		display: flex;
+		align-items: flex-start;
+		gap: 4px;
+		background: rgba(30, 30, 30, 0.15);
+		border-radius: 10px;
+		font-size: 12px;
+		padding: 5px 10px;
+		color: #ffffff;
+		box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.15);
+	}
+	.svg {
+		margin-top: 2px;
+		color: #e2dfe7;
+	}
+	.gridItemText {
+		display: flex;
+		flex-direction: column;
+		p:nth-child(2) {
+			font-size: 14px;
+			text-transform: capitalize;
+		}
+	}
+	.footer {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		width: 100%;
+		.footerText {
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+			color: #fff;
+			li {
+				list-style: inside;
+				text-shadow: 0px 0px 10px rgba(49, 49, 49, 0.5);
+			}
+		}
+	}
+	.arrowCon {
+		position: absolute;
+		top: 10px;
+		right: 10px;
+		width: 40px;
+		height: 40px;
+		border-radius: 50%;
+		background: rgba(228, 228, 228, 0.31);
+		backdrop-filter: blur(10px);
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		color: #fff;
+	}
+}
