--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -49,6 +49,7 @@
 	--color-home-input: var(--home-input-bg);
 	--color-select: var(--select-bg);
 	--color-select-border: var(--select-border);
+	--color-btn-secondary: var(--btn-secondary);
 
 	// breakpoints
 
@@ -128,6 +129,7 @@
 	// buttons
 	--negative-btn-bg: #fff;
 	--negative-btn-color: #000;
+	--btn-secondary: #1e1e1e;
 
 	// chat
 	--chat-input-bg: hsla(0, 0%, 3%, 0.6);
